--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Home</title>
-</head>
-<body>
-  <nav class="navbar">
-    <div class="logo">
-      <!-- <img src="logo.png" alt="Logo"> -->
-      <a class= "logo concert-one-title" href="#">
-        Aao Khao
-      </a>
-    </div>
-    <div class="nav-links">
-      <button class="btn border">Sign In</button>
-      <button class="btn highlight">Sign Up</button>
-    </div>
-  </nav>
-  
-  <div class="menu-container">
-  </div>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo">
+        <!-- <img src="logo.png" alt="Logo"> -->
+        <a class="logo concert-one-title" href="#"> Aao Khao </a>
+      </div>
+      <div class="nav-links">
+        <button class="btn border">Sign In</button>
+        <button class="btn highlight">Sign Up</button>
+      </div>
+    </nav>
 
-  <div id="cart-slider" class="cart-closed">
-    <div id="cart-header">
-        <span>🛒 Your Cart: 5</span>
-        <button id="cart-toggle">^</button>
-    </div>
-    <div id="cart-content">
-      <div id="cart-items">
-        <ul>Shivam</ul>
+    <div class="menu-container"></div>
+
+    <div id="cart-slider">
+      <div id="cart-header">
+        <span>🛒 Your Cart:
+          <span id="cart-count">0</span>
+        </span>
+        <!-- <div id="cart-total">$0</div> -->
+        <button id="cart-toggle" class="btn border" style="padding: 0 7px;">^</button>
+      </div>
+      <div id="cart-content">
+        <div id="cart-items"></div>
+        </div>
+        <div id="cart-total">Total: $0</div>
       </div>
     </div>
-</div>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js" type="module"></script>
+  </body>
 </html>
