--- a/10.Restaurants_site/index.html
+++ b/10.Restaurants_site/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
     <title>Home</title>
   </head>
   <body>
@@ -26,8 +29,9 @@
         <span>🛒 Your Cart:
           <span id="cart-count">0</span>
         </span>
-        <!-- <div id="cart-total">$0</div> -->
-        <button id="cart-toggle" class="btn border" style="padding: 0 7px;">^</button>
+        <button id="cart-toggle" class="btn border" style="padding: 0 7px;">
+          <svg xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 -960 960 960" width="18px" fill="#e8eaed"><path d="m280-400 200-200 200 200H280Z"/></svg>
+        </button>
       </div>
       <div id="cart-content">
         <div id="cart-items"></div>
